Added season 19/20 for big five

--- a/models/staging/football/England/England.yml
+++ b/models/staging/football/England/England.yml
@@ -6,6 +6,9 @@ sources:
     schema: dbo # You wouldn't put your source data in public, would you?
    
     tables:
+      - name: s_1920
+        identifier: PL_1920 # To alias table names to account for strange casing or naming of tables
+
       - name: s_1819
         identifier: PL_1819 # To alias table names to account for strange casing or naming of tables
 
