--- a/models/staging/football/Spain/Spain.yml
+++ b/models/staging/football/Spain/Spain.yml
@@ -6,6 +6,10 @@ sources:
     schema: dbo # You wouldn't put your source data in public, would you?
    
     tables:
+
+      - name: s_1920
+        identifier: LaLiga_1920 # To alias table names to account for strange casing or naming of tables
+
       - name: s_1819
         identifier: LaLiga_1819 # To alias table names to account for strange casing or naming of tables
 
