--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,6 +42,8 @@ models:
       staging:
           materialized: view
           schema: staging
+          tags: staging
+
      # inter:
      #     materialized: table
      #     schema: inter
@@ -54,9 +56,13 @@ models:
           football:
             materialized: table
             schema: football
+            tags:
+              - football
           economic:
             materialized: table
             schema: eco
+            tags:
+              - eco
 seeds:
   billong:
     enabled: true
