--- a/models/source/source_football.yml
+++ b/models/source/source_football.yml
@@ -21,6 +21,12 @@ sources:
       - name: italy_0019
         identifier: ResultsSerieA_00_19
 
+      - name: team_financial
+        identifier: data_teams_financial
+
+      - name: team_other
+        identifier: data_teams
+
       - name: football_countries_union
         identifier: countries_union
 
